# VMP

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon
.github/workflows/: release.yml  rust.yml
src/: install.zig  lib.rs  main.rs  main.zig  versions.zig
src/python/: env.rs  install.rs  list.rs  mod.rs  uninstall.rs  usage.rs  versions.rs
src/utils/: archive.rs  mod.rs  network.rs
tests/: python.rs
