[package]
name = "VMP"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json", "stream"] }
serde = { version = "1.0.202", features = ["derive"] }
indicatif = {version = "0.17.8", features = ["rayon"]}
futures-util = { version = "0.3.30" }
